tabs, nfl table setup, basic espn api hookup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,25 @@
   <img src="gilletteBackground1.jpg" alt="Background image" />
   <div class="banner-content">
     <h1 class="text-background">World Wide Webb of Sports</h1>
-    <a href="#" class="cta-button">Learn More</a>
   </div>
+</div>
+<div>
+  <p-tabs value="0" class="tab">
+    <p-tablist>
+        <p-tab value="0">NFL Scores</p-tab>
+        <p-tab value="1">NCAAF Scores</p-tab>
+        <p-tab value="2">TBD</p-tab>
+    </p-tablist>
+    <p-tabpanels>
+        <p-tabpanel value="0">
+          <nfl-scores-table></nfl-scores-table>
+        </p-tabpanel>
+        <p-tabpanel value="1">
+
+        </p-tabpanel>
+        <p-tabpanel value="2">
+
+        </p-tabpanel>
+    </p-tabpanels>
+</p-tabs>
 </div>
