--- a/src/app/components/nfl-scores-table/nfl-scores.component.html
+++ b/src/app/components/nfl-scores-table/nfl-scores.component.html
@@ -1,12 +1,26 @@
-<p-table [value]="scores" [tableStyle]="{ 'min-width': '50rem' }">
+<p-table 
+   [value]="scores" 
+   [tableStyle]="{ 'min-width': '50rem' }" 
+   [scrollable]="true"
+   [loading]="tableLoading">
   <ng-template pTemplate="caption">
     <div class="table-header">
       <p-select 
         [options]="weeks" 
         [(ngModel)]="selectedWeek"
+        (onChange)="onSelected()"
         optionLabel="value" 
         placeholder="Select a Week" 
-        class="w-full md:w-56"/>    
+        class="w-full md:w-56 mr-16"
+      />  
+      <p-select 
+        [options]="years" 
+        [(ngModel)]="selectedYear"
+        (onChange)="onSelected()"
+        optionLabel="value" 
+        placeholder="Select a Year" 
+        class="w-full md:w-56"
+      />    
     </div>
   </ng-template>
     <ng-template pTemplate="header">
@@ -16,17 +30,23 @@
             <th></th>
             <th></th>
             <th>Away</th>
-            <th>Time</th>
+            <th></th>
         </tr>
     </ng-template>
     <ng-template #body let-score>
         <tr>
-            <td>{{ score.homeTeam }}</td>
-            <td>{{ score.homeScore }}</td>
-            <td> - </td>
-            <td>{{ score.awayScore }}</td>
-            <td>{{ score.awayTeam }}</td>
-            <td>{{ score.time }}</td>
+            <td class="flex">
+              {{ score.homeTeam }}
+              <p-image class="ml-8" [src]=score.homeTeamLogo alt="" width="20" height="20"/>           
+            </td>
+            <td class="px-0" [ngClass]="{'highlighted': score.winner === 'home' }">{{ score.homeScore }}</td>
+            <td class="px-0"> - </td>
+            <td class="px-0" [ngClass]="{'highlighted': score.winner === 'away' }">{{ score.awayScore }}</td>
+            <td class="flex">
+              {{ score.awayTeam }}
+              <p-image class="ml-8" [src]=score.awayTeamLogo alt="" width="20" height="20"/>           
+            </td>
+            <td>{{ score.status }}</td>
           </tr>
     </ng-template>
 </p-table>
