--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,10 +16,10 @@
           <nfl-scores-table></nfl-scores-table>
         </p-tabpanel>
         <p-tabpanel value="1">
-
+          COMING SOON!
         </p-tabpanel>
         <p-tabpanel value="2">
-
+          COMING SOON!
         </p-tabpanel>
     </p-tabpanels>
 </p-tabs>
