--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+@import "primeicons/primeicons.css";
+
 .mr-16 {
     margin-right: 16px;
 }
@@ -32,4 +33,11 @@
 .flex-center {
     display: flex;
     justify-content: center;
+}
+
+.sm-btn {
+    width: 25px !important;
+    height: 25px !important;
+    padding: 0;
+    display: flex
 }
