--- a/src/app/components/nfl-scores-table/nfl-scores.component.html
+++ b/src/app/components/nfl-scores-table/nfl-scores.component.html
@@ -49,38 +49,21 @@
               <p-image class="ml-8" [src]=score.awayTeamLogo alt="" width="20" height="20"/>           
             </td>
             <td>
-              <div class="flex" [style]="{ 'align-items': 'center' }">
+              <div class="flex" [style]="{ 'align-items': 'center', 'justify-content': 'space-between' }">
                 {{ score.status }}
                 <p-button 
                   icon="pi pi-plus" 
-                  class="sm-btn ml-16" 
+                  class="sm-btn" 
                   styleClass="p-button-secondary"
                   (click)="onRowClick(score)" 
                 />
-                <!-- align flex end for button spacing??? -->
               </div>
             </td>
           </tr>
     </ng-template>
 </p-table>
 
-<p-dialog header="Header" [modal]="true" [(visible)]="detailsDialogVisible" [style]="{ width: '50rem' }" [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }">
-    <p class="mb-8">
-        Lorem ipsum dolor sit amet...
-    </p>
-    <p class="mb-8">
-        "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium...
-    </p>
-    <p class="mb-8">
-        At vero eos et accusamus et iusto odio dignissimos...
-    </p>
-    <p class="mb-8">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit...
-    </p>
-    <p class="mb-8">
-        "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium...
-    </p>
-    <p>
-        At vero eos et accusamus et iusto odio dignissimos...
-    </p>
-</p-dialog>
+<app-nfl-game-final-dialog
+  [detailsDialogVisible]="detailsFinalDialogVisible"
+  (detailsDialogVisibleChange)="closeFinalDialog()"
+></app-nfl-game-final-dialog>
