final score panel started, need to figure out score spacing and recap

--- a/src/app/components/nfl-scores-table/nfl-scores.component.html
+++ b/src/app/components/nfl-scores-table/nfl-scores.component.html
@@ -66,4 +66,5 @@
 <app-nfl-game-final-dialog
   [detailsDialogVisible]="detailsFinalDialogVisible"
   (detailsDialogVisibleChange)="closeFinalDialog()"
+  [gameDetails]="gameDetails"
 ></app-nfl-game-final-dialog>
