--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,14 @@
     margin-left: 8px;
 }
 
+.mb-4 {
+    margin-bottom: 4px;
+}
+
+.mt-4 {
+    margin-top: 4px;
+}
+
 .px-0 {
     padding-left: 0px !important;
     padding-right: 0px !important;
